--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>groceryapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>groceryapp</name>
-	<description>Assesment project for Question Pro</description>
+	<description>Assessment project for Question Pro</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -39,8 +39,15 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>1.18.30</version>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
