--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.servlet.context-path=/questionpro/groceryapp
 swagger.servers.url=http://localhost:8090/questionpro/groceryapp
 server.error.include-message=always
 #--------------------- DB Connection ------------------
-spring.datasource.url=jdbc:postgresql://localhost:5432/grocery
+spring.datasource.url=jdbc:postgresql://localhost:5432/groceryapp
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 #--------------------JPA-ORM Properties-----------------
